# lol-data-center

./: .dockerignore  .env.example  .gitignore  DEVELOPER_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  ISSUE_22_COMMENTS.md  ISSUE_DEPENDENCY_GRAPH.md  PROJECT_STATUS.md  README.md  SUBISSUES.md  achievements.yaml  alembic.ini  docker-compose.yml  lol_data_center.db  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/issues/: README.md  create-issues.sh  issue-1-match-timeline-data.md  issue-2-champion-reference-data.md  issue-3-stats-aggregation-service.md  issue-4-discord-aggregated-stats-command.md  issue-5-discord-nth-game-command.md  issue-6-stats-visualization-service.md  issue-7-integrate-graphics-discord.md
alembic/: env.py
alembic/versions/: 20260122_0757_add_champion_and_timeline_tables.py  20260122_0759_a855fcbd6fae_add_champion_table_and_timeline_data.py  20260124_add_timeline_tables.py  20260125_add_discord_user_registrations.py  20260125_add_timezone_to_datetime_columns.py  20260128_add_rank_history.py  20260206_add_predicted_win_probability.py  20260206_remove_short_duration_games.py
docs/: timeline_event_types.md  timeline_usage_examples.md  win_probability_research.md
notebooks/: README.md  win_probability_research.ipynb
scripts/: seed_champions.py
src/lol_data_center/: __init__.py  cli.py  config.py  logging_config.py  main.py
tests/: conftest.py  test_remove_short_games_migration.py
tests/achievements/: __init__.py  test_conditions.py  test_consecutive_condition.py  test_deduplication.py  (+2 more)
(+68 files in other folders)
