[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lol-data-center"
version = "0.1.0"
description = "League of Legends match data collection and achievement evaluation system"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Jan" }
]
dependencies = [
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "alembic>=1.13.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "scipy>=1.11.0",
    "discord.py>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "aiosqlite>=0.19.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[project.scripts]
lol-data-center = "lol_data_center.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/lol_data_center"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:'audioop' is deprecated:DeprecationWarning:discord.player",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102"]
